# DubWriter

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
_codeql_build_dir/.qt/: QtDeploySupport.cmake
_codeql_build_dir/DubWriterCore_autogen/: deps  mocs_compilation.cpp
_codeql_build_dir/DubWriterCore_autogen/PRMOGMWJPH/: moc_DocumentModel.cpp.d
_codeql_build_dir/DubWriterUI_autogen/: deps
_codeql_build_dir/DubWriterUI_autogen/YPKJ5OE7LN/: moc_MainWindow.cpp.d
_codeql_build_dir/DubWriter_autogen/: deps
src/: main.cpp
src/core/: DocumentModel.cpp  DocumentModel.h
src/ui/: MainWindow.cpp  MainWindow.h
